<resources>
    <string name="app_name">Select2</string>
    <string name="foodi_logo_des">foodi_logo</string>
    <string name="search_toolbar">Search</string>
    <string name="select">Select</string>
    <string name="store">Store</string>
    <string name="magazine">Magazine</string>
    <string name="cart">Cart</string>
    <string name="me">Me</string>
    <string name="img_item">img_item</string>
    <string name="deal_date">Wendsaday deal</string>
    <string name="tittle_deal">25% off for a table of two</string>
    <string name="content_deal">Dinner 25% off, and only 68USD/each in Solois Coffee</string>
    <string name="tittle">Hot Today</string>
    <string name="des">Most popular places for you each day</string>
    <string name="stidk"><![CDATA[<big><b>1</b></big>/5 ]]></string>
    <string name="tittle3">Speical Offers</string>
    <string name="des3">Awesome deals unlocked every day</string>
    <string name="stidk3">View More</string>
    <string name="restaurant">restaurant</string>
    <string name="qick_fix_icon">qick_fix_icon</string>
    <string name="dessert_icon">dessert_icon</string>
    <string name="coffee_icon">coffee_icon</string>
    <string name="wine_icon">wine_icon</string>
    <string name="quick_fix">Quick Fix</string>
    <string name="drinks">Awesome Drinks</string>
    <string name="greens">Healthy &amp; Green</string>
    <string name="tittle2">City Guide</string>
    <string name="describ">We hand-picked some great places for you.</string>
    <string name="tx_price1"><![CDATA[<strike>$120</strike>]]></string>
    <string name="tx_price2"><![CDATA[<strike>$90</strike>]]></string>
    <string name="name1">Soloist Coffee</string>
    <string name="describ1">An elegant place</string>
    <string name="price_saled1">68USD/Each</string>
    <string name="name2">Croissant Fun</string>
    <string name="describ2">The best in town</string>
    <string name="price_saled2">10USD/Each</string>
    <string name="collumn">Columns</string>
    <string name="tittle_child4_1">Best Brunch Places \n A Free App Template by Paul Hershey\n A Free App Template by Paul Hershey</string>
    <string name="tittle_child4_2">Eating Alone\n Best Brunch Places</string>
    <string name="tittle_child4_3">Party Every Night</string>
    <string name="arrow_right">arrow_right</string>
    <string name="freeshipping">Freeshipping</string>
</resources>
