<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/img_item_child"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/img_item"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/recommendation_banner_1" />

    <TextView
        android:id="@+id/deal_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal"
        android:textColor="#cd4e48"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_item_child"
        tools:text="@string/deal_date" />

    <TextView
        android:id="@+id/tittle_deal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:textColor="#121212"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deal_date"
        tools:text="@string/tittle_deal" />

    <TextView
        android:id="@+id/content_deal"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:textColor="#6c6f74"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tittle_deal"
        tools:text="@string/content_deal" />
</androidx.constraintlayout.widget.ConstraintLayout>