<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tittle_type3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:text="Categories"
        android:textColor="#9b9b9b"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/restaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/restaurant"
        app:layout_constraintEnd_toStartOf="@+id/wine_icon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:srcCompat="@drawable/restaurant_icon" />

    <ImageView
        android:id="@+id/wine_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/wine_icon"
        app:layout_constraintEnd_toStartOf="@+id/qick_fix_icon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/restaurant"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:srcCompat="@drawable/wine_icon" />

    <ImageView
        android:id="@+id/qick_fix_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/qick_fix_icon"
        app:layout_constraintEnd_toStartOf="@+id/dessert_icon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/wine_icon"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:srcCompat="@drawable/quick_fix_icon" />

    <ImageView
        android:id="@+id/dessert_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/dessert_icon"
        app:layout_constraintEnd_toStartOf="@+id/coffee_icon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/qick_fix_icon"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:srcCompat="@drawable/dessert_icon" />

    <ImageView
        android:id="@+id/coffee_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/coffee_icon"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toEndOf="@+id/dessert_icon"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:srcCompat="@drawable/coffee_icon" />

    <TextView
        android:id="@+id/tx_restaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:gravity="center_horizontal"
        android:text="Restaurant"
        android:textColor="#121212"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="@+id/restaurant"
        app:layout_constraintStart_toStartOf="@+id/restaurant"
        app:layout_constraintTop_toBottomOf="@+id/restaurant" />

    <TextView
        android:id="@+id/tx_wine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="Wine"
        android:textColor="#121212"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="@+id/wine_icon"
        app:layout_constraintStart_toStartOf="@+id/wine_icon" />

    <TextView
        android:id="@+id/txquick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/quick_fix"
        android:textColor="#121212"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="@+id/qick_fix_icon"
        app:layout_constraintStart_toStartOf="@+id/qick_fix_icon" />

    <TextView
        android:id="@+id/txdessert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="Dessert"
        android:textColor="#121212"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="@+id/dessert_icon"
        app:layout_constraintStart_toStartOf="@+id/dessert_icon" />

    <TextView
        android:id="@+id/txcoffee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="Coffee"
        android:textColor="#121212"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="@+id/coffee_icon"
        app:layout_constraintStart_toStartOf="@+id/coffee_icon" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3846154" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="14dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="10dp" />

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginEnd="20dp"
        android:background="#dcdcdc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>