<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/parent_rv_to_top"
        android:textColor="@color/text_grey_color"
        android:textSize="@dimen/tittle_parent_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/tittle" />

    <TextView
        android:id="@+id/describtion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="#6c6f74"
        tools:text="@string/des"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tittle" />

    <TextView
        android:id="@+id/stidk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/tittle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tittle"
        tools:text="@string/stidk" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/child_rv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/describtion" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="20dp"
        android:background="@color/view_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/child_rv" />

    <!--<TextView-->
        <!--android:id="@+id/textView4"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="15dp"-->
        <!--android:layout_marginStart="1dp"-->
        <!--android:layout_marginTop="12dp"-->
        <!--android:textSize="13sp"-->
        <!--android:textColor="#cd4e48"-->
        <!--android:gravity="center_horizontal"-->
        <!--tools:text="Wendsaday deal"-->
        <!--app:layout_constraintStart_toStartOf="Parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/recyclerView" />-->

    <!--<TextView-->
        <!--android:id="@+id/textView5"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="20dp"-->
        <!--android:textSize="17sp"-->
        <!--android:textColor="#121212"-->
        <!--tools:text="25% off for a table of two"-->
        <!--app:layout_constraintStart_toStartOf="Parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/textView4" />-->

    <!--<TextView-->
        <!--android:id="@+id/textView6"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="36dp"-->
        <!--android:layout_marginTop="4dp"-->
        <!--android:textSize="15sp"-->
        <!--android:textColor="#6c6f74"-->
        <!--tools:text="Dinner 25% off, and only 68USD/each in Solois Coffee"-->
        <!--app:layout_constraintStart_toStartOf="Parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/textView5" />-->
</androidx.constraintlayout.widget.ConstraintLayout>